--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
       </span>
 
       <!-- 詳細遊戲介紹 -->
-      <section>
+      <section class="game_all_info">
         <figure class="game1">
           <img class="game_img1" src="./圖片/遊戲1.png" alt="" />
         </figure>
@@ -48,7 +48,7 @@
           </h3>
         </div>
       </section>
-      <section>
+      <section class="game_all_info">
         <div class="game2_text">
           <h2>強化武器，朝向更高境界</h2>
           <h3>
@@ -57,10 +57,10 @@
           </h3>
         </div>
         <figure class="game2">
-          <img class="game_img2" src="./圖片/遊戲2.png"" alt="" />
+          <img class="game_img2" src="./圖片/遊戲2.png" alt="" />
         </figure>
       </section>
-      <section>
+      <section class="game_all_info">
         <figure class="game3">
           <img class="game_img3" src="./圖片/遊戲3.png"" alt="" />
         </figure>
