--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
           onclick="location.href='./buy.html'"
       /></span>
     </header>
-
+    <!-- <div class="video-background">
+      <div class="YTPOverlay">
+        <iframe
+          class="video"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/SSZV5ma5PvQ?mute=1&autoplay=1&loop=1&playlist=SSZV5ma5PvQ&controls=0&start=5"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div> -->
     <!-- 最新資訊 -->
     <span class="news_text">
       <h1>最新資訊</h1>
@@ -102,57 +116,24 @@
           />
         </span>
       </div>
-      <!-- <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/vjKDMC6ppBk?mute=1&autoplay=1&loop=1&playlist=vjKDMC6ppBk&controls=0"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen
-      ></iframe> -->
-      <iframe
-        id="iframe_YTP_1712738634761"
-        class="playerBox"
-        style="
-          position: absolute;
-          z-index: 3;
-          width: 1200px;
-          height: 675px;
-          top: 0px;
-          left: 0px;
-          overflow: hidden;
-          opacity: 1;
-          user-select: none;
-          margin-top: -2px;
-          margin-left: 0px;
-          max-width: initial;
-          transition-property: opacity;
-          transition-duration: 1000ms;
-        "
-        frameborder="0"
-        allowfullscreen=""
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        title="【MHW】0802公式サイト背景用動画"
-        width="640"
-        height="360"
-        src="https://www.youtube.com/embed/SSZV5ma5PvQ?modestbranding=1&amp;autoplay=1&amp;loop=1&amp;start=3&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1&amp;version=3&amp;playerapiid=iframe_YTP_1712738634761&amp;origin=https%3A%2F%2Fwww.monsterhunter.com&amp;allowfullscreen=true&amp;wmode=transparent&amp;iv_load_policy=3&amp;playsinline=1&amp;mute=1&amp;html5=1&amp;widgetid=1"
-        data-gtm-yt-inspected-8="true"
-        data-gtm-yt-inspected-13="true"
-        unselectable="on"
-      ></iframe>
-      <div
-        class="YTPOverlay"
-        style="
-          position: absolute;
-          top: 0px;
-          left: 0px;
-          width: 100%;
-          height: 100%;
-        "
-      ></div>
+      <!-- <div class="video-background">
+        <div class="YTPOverlay">
+          <iframe
+            class="video"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/vjKDMC6ppBk?mute=1&autoplay=1&loop=1&playlist=vjKDMC6ppBk&controls=0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div> -->
+
       <!-- 狩獵武器 -->
+
       <div class="main_2-text">
         <figure class="main_2-title">狩獵武器</figure>
       </div>
@@ -182,66 +163,42 @@
       <article class="main_3">
         <ul>
           <li class="master1">
-            <a href="./monster.html"
-              ><img src="./圖片/monster1-main.png" alt=""
-            /></a>
+            <a href="./monster.html"><img src="./圖片/金獅子.png" alt="" /></a>
           </li>
           <li class="master2">
-            <a href="./monster.html"
-              ><img src="./圖片/monster2-main.png" alt=""
-            /></a>
+            <a href="./monster.html"><img src="./圖片/黑蝕龍.png" alt="" /></a>
           </li>
           <li class="master3">
-            <a href="./monster.html"
-              ><img src="./圖片/monster3-main.png" alt=""
-            /></a>
+            <a href="./monster.html"><img src="./圖片/冰咒龍.png" alt="" /></a>
           </li>
           <li class="master4">
-            <a href="./monster.html">
-              <img src="./圖片/monster4-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/天洄龍.png" alt="" /></a>
           </li>
           <li class="master5">
-            <a href="./monster.html">
-              <img src="./圖片/monster5-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/迅龍.png" alt="" /></a>
           </li>
           <li class="master6">
-            <a href="./monster.html">
-              <img src="./圖片/monster6-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/天慧龍.png" alt="" /></a>
           </li>
         </ul>
         <ul>
           <li class="master1">
-            <a href="./monster.html">
-              <img src="./圖片/monster1-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/金獅子.png" alt="" /></a>
           </li>
           <li class="master2">
-            <a href="./monster.html">
-              <img src="./圖片/monster2-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/黑蝕龍.png" alt="" /></a>
           </li>
           <li class="master3">
-            <a href="./monster.html">
-              <img src="./圖片/monster3-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/冰咒龍.png" alt="" /></a>
           </li>
           <li class="master4">
-            <a href="./monster.html">
-              <img src="./圖片/monster4-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/天洄龍.png" alt="" /></a>
           </li>
           <li class="master5">
-            <a href="./monster.html">
-              <img src="./圖片/monster5-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/迅龍.png" alt="" /></a>
           </li>
           <li class="master6">
-            <a href="./monster.html">
-              <img src="./圖片/monster6-main.png" alt=""
-            /></a>
+            <a href="./monster.html"> <img src="./圖片/天慧龍.png" alt="" /></a>
           </li>
         </ul>
       </article>
@@ -254,7 +211,7 @@
             <input
               type="button"
               value="了解更多"
-              onclick="location.href='./魔物.html'"
+              onclick="location.href='./monster.html'"
             />
           </span>
         </span>
@@ -345,3 +302,4 @@
     </main>
   </body>
 </html>
+<!-- modestbranding=1&amp;autoplay=1&amp;loop=1&amp;playlist=SSZV5ma5PvQ&amp;start=3&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1&amp;version=3&amp;playerapiid=iframe_YTP_1712738634761&amp;origin=https%3A%2F%2Fwww.monsterhunter.com&amp;allowfullscreen=true&amp;wmode=transparent&amp;iv_load_policy=3&amp;playsinline=1&amp;mute=1&amp;html5=1&amp;widgetid=1 -->
