--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <iframe
+    <!-- <iframe
       id="iframe_YTP_1712738634761"
       class="playerBox"
       style="
@@ -40,5 +40,55 @@
       class="YTPOverlay"
       style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%"
     ></div>
+    <div class="border-image-clip-path"></div>
+    <img src="./圖片/金獅子.png" alt="" /> -->
+
+    <!-- <div class="box">
+      <div style="height: 100vw"></div>
+    </div>
+    <style>
+      .box {
+        padding: 4px;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .box > * {
+        background-color: #fff;
+        position: relative;
+      }
+
+      .box:before {
+        content: "";
+        animation: roll linear 2s infinite;
+        background: conic-gradient(#58e, #fff);
+        position: absolute;
+        width: 1000px;
+        height: 1000px;
+        left: 50%;
+        top: 50%;
+      }
+
+      @keyframes roll {
+        from {
+          transform: translate(-50%, -50%) rotateZ(0deg);
+        }
+        to {
+          transform: translate(-50%, -50%) rotateZ(-360deg);
+        }
+      }
+    </style> -->
+    <div></div>
+
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/ocB8ZjGnIYM?si=GihTfukh1BQd4qLO&amp;controls=0&amp;start=29&amp;end=35"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
   </body>
 </html>
