--- a/monsterAll.html
+++ b/monsterAll.html
@@ -13,11 +13,11 @@
         <li class="nav_logo">
           <a href="./index.html"><img src="./圖片/logo.png" alt="" /> </a>
         </li>
-        <li><a href="./news.html">最新資訊</a></li>
-        <li><a href="./game.html">遊戲介紹</a></li>
-        <li><a href="./weaponry.html">狩獵武器</a></li>
-        <li><a href="./monster.html">魔物</a></li>
-        <li><a href="./buy.html">商品資訊</a></li>
+        <li class="nav_info"><a href="./news.html">最新資訊</a></li>
+        <li class="nav_info"><a href="./game.html">遊戲介紹</a></li>
+        <li class="nav_info"><a href="./weaponry.html">狩獵武器</a></li>
+        <li class="nav_info"><a href="./monster.html">魔物</a></li>
+        <li class="nav_info"><a href="./buy.html">商品資訊</a></li>
       </ul>
     </nav>
     <div class="video-background">
@@ -36,6 +36,26 @@
       </div>
       <article>
         <ul>
+          <li>
+            <img src="./圖片/img01.png" alt="" />
+            <p>金獅子</p>
+          </li>
+          <li>
+            <img src="./圖片/img01.png" alt="" />
+            <p>金獅子</p>
+          </li>
+          <li>
+            <img src="./圖片/img01.png" alt="" />
+            <p>金獅子</p>
+          </li>
+          <li>
+            <img src="./圖片/img01.png" alt="" />
+            <p>金獅子</p>
+          </li>
+          <li>
+            <img src="./圖片/img01.png" alt="" />
+            <p>金獅子</p>
+          </li>
           <li>
             <img src="./圖片/img01.png" alt="" />
             <p>金獅子</p>
