--- a/buy.html
+++ b/buy.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="./css/buy_rwd.css" />
     <title>商品資訊</title>
   </head>
   <body>
@@ -80,16 +81,16 @@
 
             <div class="swiper-pagination"></div>
           </div>
+          <div class="buy_top_info">
+            <h3>
+              【新增內容】令《MONSTER HUNTER
+              RISE》的世界變得更廣闊和更有樂趣的超大型新增內容。
+              新的魔物和原野正在等候獵人們的來臨！ 超大型擴充內容《MONSTER
+              HUNTER RISE: SUNBREAK》登場！ ※另有包含此商品的組合商品《MONSTER
+              HUNTER RISE: SUNBREAK 豪華版》同時發售，請注意避免重複購買。
+              若在遊戲啟動時購入追加內容，須重啟遊戲才會顯示所購的追加內容。
+            </h3>
 
-          <h3>
-            【新增內容】令《MONSTER HUNTER
-            RISE》的世界變得更廣闊和更有樂趣的超大型新增內容。
-            新的魔物和原野正在等候獵人們的來臨！ 超大型擴充內容《MONSTER HUNTER
-            RISE: SUNBREAK》登場！ ※另有包含此商品的組合商品《MONSTER HUNTER
-            RISE: SUNBREAK 豪華版》同時發售，請注意避免重複購買。
-            若在遊戲啟動時購入追加內容，須重啟遊戲才會顯示所購的追加內容。
-          </h3>
-          <div>
             <ul>
               <li>支援平台: Nintendo Switch</li>
               <li>遊戲類型: 動作</li>
