--- a/monsterAll.html
+++ b/monsterAll.html
@@ -59,7 +59,7 @@
 
     <!-- 新魔物 -->
     <div>
-      <span>
+      <span class="monster_top_title">
         <img src="./圖片/標題黑框blue.png" alt="" />
         <h1>魔物</h1>
         <p>與獵人對峙的魔物</p>
@@ -228,7 +228,8 @@
       </ul>
       <img class="gold-border" src="./圖片/雙金框.png" alt="" />
       <span class="btn-totop"
-        ><a href="./news.html"><img src="./圖片/btn-totop.png" alt="" /></a
+        ><a href="./monsterAll.html"
+          ><img src="./圖片/btn-totop.png" alt="" /></a
       ></span>
     </main>
 
